--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1636,6 +1636,9 @@ input, select, textarea {
 			opacity: 0.75;
 			margin-bottom: 0;
 			text-transform: uppercase;
+			outline: none;         /* Quita la línea de puntos al hacer clic */
+  			border: none;          /* Por si algún navegador aplica un borde */
+  			text-decoration: none; /* Ya lo tenías, pero se asegura que no hay subrayado */
 		}
 
 		body.is-article-visible #footer {
